--- a/style.css
+++ b/style.css
@@ -62,6 +62,12 @@ textarea {
   color: #BFC7D1;      
 }
 
+textarea:focus {
+  outline: none;       
+  box-shadow: none;  
+  border-color: #ccc;   
+}
+
 button {
   padding: 12px 20px;
   margin-top: 10px;
@@ -130,5 +136,6 @@ button.loading {
   }
 
 }
+
 
 
